# DOW-Effect

./: .gitignore  DATA_PIPELINE.md  README.md  pyproject.toml  requirements_phase1.txt
.agents/: agents.md
Documents/: AUDIT_REPORT.md  DATA_PIPELINE.md  FINAL_METHODOLOGY_AND_VERIFICATION.md
config/: costs.yaml  data_sources.yaml  ml.yaml  options.yaml  pipeline.yaml  reporting.yaml  universe.yaml
data/audit/: audit_report.csv  phase_1_complete.flag  phase_2_complete.flag
research_docs/: CODE_REVIEW_STANDARD.md  DECISION_LOG.md  EXPERIMENT_REGISTRY.md  IMPLEMENTATION_PRINCIPLES.md  METHODOLOGY_BACKLOG.md  RESEARCH_CONTRACT.md  RESEARCH_LEDGER.md  VALIDATION_CHECKLIST.md
scripts/: run_conditional_discovery.py  run_hmm_discovery.py  run_phase1.py  run_phase2.py  run_spreads_discovery.py  run_universe_discovery.py  scratch_gap.py
src/doweffect/: __init__.py
src/doweffect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/doweffect/data/: __init__.py  auditor.py  cross_validator.py  downloader.py  validator.py
src/doweffect/events/: calendar.py
src/doweffect/features/: events.py  hmm_regimes.py  interactions.py  liquidity.py  market_neutral.py  regimes.py  returns.py  spreads.py
src/doweffect/ledger/: hypothesis_log.py
src/doweffect/ml/: discovery.py  interpretability.py
src/doweffect/reports/: statistical.py
src/doweffect/stability/: persistence.py  structural_breaks.py
src/doweffect/stats/: bootstrap.py  corrections.py  cross_section.py  economics.py  (+5 more)
tests/: test_auditor.py  test_downloader.py  test_features.py  test_stats.py
(+2 files in other folders)
