[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doweffect"
version = "0.1.0"
description = "Day-of-Week Effect Analysis for Indian Power Sector Equities and Options"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yfinance",
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "torch",
    "shap",
    "matplotlib",
    "seaborn",
    "plotly",
    "reportlab",
    "pandas_market_calendars",
    "pyyaml",
    "tqdm",
    "pyarrow"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
